--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
   </section>
   <div class="status"></div>
-
+  <script src="requests.js"></script>
   <script src="hangman.js"></script>
   <script src="app.js"></script>
 </body>
