--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </div>
   </section>
   <div class="status"></div>
+  <button id="reset">reset</button>
   <script src="requests.js"></script>
   <script src="hangman.js"></script>
   <script src="app.js"></script>
