added webpack and changed directry

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles/styles.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
     integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
   <link
@@ -17,16 +17,14 @@
 
 <body>
   <h2>Make guesses and solve the puzzle!</h2>
-
   <section class="section-center">
     <div class="puzzle">
     </div>
   </section>
   <div class="status"></div>
   <button id="reset">reset</button>
-  <script src="requests.js"></script>
-  <script src="hangman.js"></script>
-  <script src="app.js"></script>
+  <script src="/scripts/bundle.js"></script>
+
 </body>
 
 </html>
